--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "content_scripts": [
       {
         "matches": ["*://quizlet.com/*"],
-        "js": ["background.js"]
+        "js": ["background.js"],
+        "css": ["quizletMatch.css"]
       }
     ],
 
