--- a/manifest.json
+++ b/manifest.json
@@ -15,10 +15,10 @@
     ],
 
     "browser_action": {
-      "default_popup": "options.html"
+      "default_popup": "options/options.html"
     },
     "options_ui": {
-      "page": "options.html"
+      "page": "options/options.html"
     },
 
     "permissions": [
